--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,11 @@
         <item name="android:textColor">@android:color/black</item>
     </style>
 
+    <style name="AboutMeStyle" parent="NameStyle">
+        <item name="android:lineSpacingMultiplier">@dimen/line_spacing</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:padding">@dimen/layout_margin</item>
+    </style>
+
 </resources>
