--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,20 +15,42 @@
         android:text="@string/thomas"
         android:textAlignment="center" />
 
+    <TextView
+        android:id="@+id/nicknameText"
+        style="@style/EditTextStyle"
+        android:paddingBottom="@dimen/zero_dp"
+        android:paddingTop="@dimen/zero_dp"
+        android:visibility="gone"
+        android:text="" />
+
+    <EditText
+        android:id="@+id/nicknameEdit"
+        style="@style/EditTextStyle"
+        android:hint="@string/nickname" />
+
+    <Button
+        android:id="@+id/button"
+        style="@style/ButtonStyle"
+        android:onClick="updateNickname"
+        android:text="@string/change" />
+
     <ImageView
         android:id="@+id/star_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="@string/star_image"
         app:srcCompat="@android:drawable/btn_star_big_on" />
+
     <ImageView
         android:id="@+id/avatar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/bitmoji" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             style="@style/AboutMeStyle"
             android:text="@string/bio" />
