--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,4 +39,9 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
+    <style name="NicknameTextStyle" parent="EditTextStyle">
+        <item name="android:paddingTop">@dimen/zero_dp</item>
+        <item name="android:paddingBottom">@dimen/zero_dp</item>
+    </style>
+
 </resources>
